[package]
name = "num"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { features = ["std", "help", "usage", "error-context", "color"], default-features = false, version = "4.5.2" }
crossterm = { default-features = false, version = "0.27.0" }
surge-ping = "0.8.1"
time = { version = "0.3.34", features = ["formatting", "local-offset"], default-features = false }
tokio = { version = "1.36.0", features = ["macros", "signal", "fs", "io-util"], default-features = false }

[profile.release]
opt-level = "z"
strip = true
panic = "abort"
lto = true
codegen-units = 1
